fix: resource leak, stale-refresh fallback, deprecated URL, locale, and conn cleanup in GeoIpService
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>